--- a/tools.css
+++ b/tools.css
@@ -4,7 +4,7 @@
 }
 
 .tools_space {
-  background-color: #fff5ee;
+  background-color: ghostwhite;
   font-family: Arial, Helvetica, sans-serif;
   width: 80%;
   height: 91vh;
@@ -15,6 +15,9 @@
   justify-content: space-between;
   background-color: #ebebebf6;
   height: 30px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .tools_title {
@@ -44,12 +47,12 @@
 
 .tools_body {
   width: 100%;
-  background-color: #fff5ee;
+  background-color: ghostwhite;
   margin-top: 10vh;
 }
 
 .img_position {
-  background-color: #fff5ee;
+  background-color: ghostwhite;
 }
 
 .img_position img {
