--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(./img/moutain.png);
+  background-image: url(../img/moutain.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
