--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0;
-  background-image: url("./img/milkyway.jpg");
+  background-image: url("../img/milkyway.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
