--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,7 @@ footer {
     margin-left: 0;
     height: 90vh;
     padding-left: 0;
+    z-index: 1;
   }
 
   .InputAddOn-field,
@@ -166,8 +167,5 @@ footer {
   }
   .InputAddOn-field {
     width: 30vw;
-  }
-  .logo_size {
-    margin-bottom: 1em;
   }
 }
