--- a/css/main.css
+++ b/css/main.css
@@ -156,9 +156,8 @@ footer {
     justify-content: space-around;
     align-items: flex-end;
     margin-left: 0;
-    height: 90vh;
+    height: 90%;
     padding-left: 0;
-    z-index: 1;
   }
 
   .InputAddOn-field,
@@ -167,12 +166,5 @@ footer {
   }
   .InputAddOn-field {
     width: 30vw;
-  }
-}
-
-@media screen and (max-width: 336px) {
-  .logo_size {
-    display: fixed;
-    margin-bottom: 2em;
   }
 }
