--- a/css/test.css
+++ b/css/test.css
@@ -1,31 +1,147 @@
+html,
 body {
-  background: #fafafa;
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
+  height: 100%;
+  margin: 0;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-h2 {
-  margin-top: 0;
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 10px 0;
+  text-align: center;
+
+  color: white;
+
+  background: rgb(51, 45, 45);
+  opacity: 0.8;
 }
 
-.card {
-  padding: 40px;
-  background: #fff;
-  max-width: 360px;
-  border-radius: 20px;
-  margin: 60px auto;
+.logo_size a {
+  text-decoration: none;
+  color: white;
 }
 
-.highlight {
-  font-weight: bold;
-  color: #294;
+.logo_size a:hover {
+  color: white;
 }
 
-.shadow1 {
-  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
-    0 15px 40px rgba(166, 173, 201, 0.2);
+/*
+.logos section,
+.logos section p {
+  font-size: 4rem;
+  color: aliceblue;
+  font-family: "Nanum Myeongjo", serif;
 }
 
-.shadow2 {
-  box-shadow: 0 7px 30px -10px rgba(150, 170, 180, 0.5);
+*/
+
+.logos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 30px;
+  height: 640px;
+}
+
+.icon_font {
+  text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+}
+
+.logo_name {
+  margin-left: 10px;
+}
+.logo_size {
+  /* width: 60px; */
+}
+.start_button {
+  width: 30px;
+}
+.search_style {
+  background-color: white;
+}
+.rocket_icons {
+  color: rgb(240, 234, 234);
+  padding-top: 3px;
+}
+
+.tools_center {
+  margin-left: 8px;
+}
+
+.email_style {
+  margin-left: 6px;
+  color: white;
+}
+
+.md-60 {
+  font-size: 60px;
+}
+
+@media screen and (max-width: 768px) {
+  .logos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin-left: 0;
+    height: 90vh;
+    padding-left: 0;
+  }
+}
+
+.footer_div {
+}
+.InputAddOn {
+  display: flex;
+}
+
+.InputAddOn-field {
+  flex: 1;
+  /* field styles */
+}
+
+.InputAddOn-item {
+  background-color: #ebebebf6;
+  color: #666666;
+  font: inherit;
+  font-weight: normal;
+}
+
+.InputAddOn-field {
+  border: 1px solid rgba(173, 172, 172, 0.199);
+
+  padding: 0.5em 0.75em;
+
+  padding-left: 8px;
+
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.InputAddOn-item {
+  padding: 0.5em 0.75em;
+
+  padding-left: 8px;
+
+  background-color: rgb(255, 255, 255);
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.footer_div {
+  display: flex;
+  justify-content: space-between;
+}
+.footer1 {
+  display: flex;
+}
+
+.clock_style {
+  padding-right: 15px;
+  text-align: right;
+  font-size: large;
 }
