--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ footer {
     justify-content: space-around;
     align-items: flex-end;
     margin-left: 0;
-    height: 90vh;
+    height: 90%;
     padding-left: 0;
   }
 
