--- a/css/tools.css
+++ b/css/tools.css
@@ -7,7 +7,7 @@
   background-color: ghostwhite;
   font-family: Arial, Helvetica, sans-serif;
   width: 80%;
-  height: 91vh;
+  /* height: 91vh; */
 }
 
 .tools_header {
@@ -166,6 +166,11 @@ h1 {
   }
   h1 {
     display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .tools_space {
+    height: 90%;
   }
 }
 
