--- a/css/tools.css
+++ b/css/tools.css
@@ -7,7 +7,7 @@
   background-color: ghostwhite;
   font-family: Arial, Helvetica, sans-serif;
   width: 80%;
-  /* height: 91vh; */
+  height: 91vh;
 }
 
 .tools_header {
